# crates/database/src/schema.rs
@@ -188,7 +188,7 @@ diesel::table! {
 		listed -> Bool,
 		cloud -> Nullable<Bool>,
 		geolocation -> Nullable<Array<Nullable<Float8>>>,
-		alert_when_down -> Bool,
+		alert_when_down_for -> Interval,
 	}
 }
 
