# crates/private-server/src/fns/devices.rs
@@ -187,7 +187,7 @@ fn server_to_info(s: database::servers::Server) -> ServerInfo {
 		listed: s.listed,
 		cloud: s.cloud,
 		geolocation: s.geolocation,
-		alert_when_down: s.alert_when_down,
+		alert_when_down_for: s.alert_when_down_for.0.as_secs(),
 	}
 }
 
